Parser with own grammar

--- a/Translation/grammar.cfg
+++ b/Translation/grammar.cfg
@@ -1,8 +1,8 @@
 S  -> NP VP | VP
-NP -> Det Nom | PropN | V NP
-Nom -> Adj Nom | N | N Adj
-VP -> Aux V NP | V NP | V S | V NP PP
-PP -> P NP
+NP -> Det Nom P | Det Nom | V NP
+Nom -> Adj Nom | N PP | N Adj PP | N Adj | N | PropN
+VP -> Aux V NP | Aux Aux VP | V NP | V Adv
+PP -> P NP | ADP Nom | ADP NP
 
 PropN -> 'Repubblica'
 Det -> 'una' | 'la' | 'tuo' | 'Gli' | 'La'
@@ -10,5 +10,6 @@ N -> 'spada' | 'padre' | 'mossa' | 'avanzi'
 Adj -> 'leale' | 'ultimi' | 'vecchia' | 'laser'
 V -> 'È' | 'fatto' | 'spazzati' | 'è'
 Aux -> 'Ha' | 'sono' | 'stati'
+Adv -> 'via'
 P -> 'in' | 'su' | 'da' | 'con'
 ADP -> 'di' | 'della'
