--- a/Translation/grammar.cfg
+++ b/Translation/grammar.cfg
@@ -5,7 +5,7 @@ VP -> Aux V NP | Aux Aux VP | V NP | V Adv
 PP -> P NP | ADP Nom | ADP NP
 
 PropN -> 'Repubblica'
-Det -> 'una' | 'la' | 'tuo' | 'Gli' | 'La'
+Det -> 'una' | 'la' | 'tuo' | 'Gli'
 N -> 'spada' | 'padre' | 'mossa' | 'avanzi'
 Adj -> 'leale' | 'ultimi' | 'vecchia' | 'laser'
 V -> 'È' | 'fatto' | 'spazzati' | 'è'
