--- a/Translation/grammars/grammar.cfg
+++ b/Translation/grammars/grammar.cfg
@@ -1,8 +1,8 @@
 S  -> NP VP | VP
-NP -> Det Nom P | Det Nom | V NP
-Nom -> Adj Nom | N PP | N Adj PP | N Adj | N | PropN
+NP -> Det NOM
+NOM -> Adj NOM | N PP | N Adj PP | N Adj | N | PropN
 VP -> Aux V NP | Aux Aux VP | V NP | V Adv
-PP -> P NP | ADP Nom | ADP NP
+PP -> Prep NP | Adp NOM | Adp NP
 
 PropN -> 'Repubblica'
 Det -> 'una' | 'la' | 'tuo' | 'Gli'
@@ -11,5 +11,5 @@ Adj -> 'leale' | 'ultimi' | 'vecchia' | 'laser'
 V -> 'È' | 'fatto' | 'spazzati' | 'è'
 Aux -> 'Ha' | 'sono' | 'stati'
 Adv -> 'via'
-P -> 'in' | 'su' | 'da' | 'con'
-ADP -> 'di' | 'della'
+Prep -> 'in' | 'su' | 'da' | 'con'
+Adp -> 'di' | 'della'
