--- a/Translation/grammars/grammar.cfg
+++ b/Translation/grammars/grammar.cfg
@@ -2,7 +2,7 @@ S  -> NP VP | VP
 NP -> Det NOM
 NOM -> Adj NOM | N PP | N Adj PP | N Adj | N | PropN
 VP -> Aux V NP | Aux Aux VP | V NP | V Adv
-PP -> Prep NP | Adp NOM | Adp NP
+PP -> Adp NOM | Adp NP
 
 PropN -> 'Repubblica'
 Det -> 'una' | 'la' | 'tuo' | 'Gli'
@@ -11,5 +11,4 @@ Adj -> 'leale' | 'ultimi' | 'vecchia' | 'laser'
 V -> 'È' | 'fatto' | 'spazzati' | 'è'
 Aux -> 'Ha' | 'sono' | 'stati'
 Adv -> 'via'
-Prep -> 'in' | 'su' | 'da' | 'con'
-Adp -> 'di' | 'della'
+Adp -> 'di' | 'della'| 'in' | 'su' | 'da' | 'con'
