--- a/Translation/grammars/grammar.cfg
+++ b/Translation/grammars/grammar.cfg
@@ -1,7 +1,7 @@
 S  -> NP VP | VP
 NP -> Det NOM
 NOM -> Adj NOM | N PP | N Adj PP | N Adj | N | PropN
-VP -> Aux V NP | Aux Aux VP | V NP | V Adv
+VP -> Aux V NP | Aux VP | V NP | V Adv
 PP -> Adp NOM | Adp NP
 
 PropN -> 'Repubblica'
