aggiunta una frase e migliorato il sentence plan

--- a/Translation/Grammar/grammar.cfg
+++ b/Translation/Grammar/grammar.cfg
@@ -1,14 +1,14 @@
 S  -> NP VP | VP
 NP -> Det NOM
 NOM -> Adj NOM | N PP | N Adj PP | N Adj | N | PropN
-VP -> Aux V NP | Aux VP | V NP | V Adv
+VP -> Aux V NP | Aux VP | V NP | V Adv | V
 PP -> Adp NOM | Adp NP
 
 PropN -> 'Repubblica'
-Det -> 'una' | 'la' | 'tuo' | 'Gli'
+Det -> 'una' | 'La' | 'la' | 'tuo' | 'Gli'
 N -> 'spada' | 'padre' | 'mossa' | 'avanzi'
 Adj -> 'leale' | 'ultimi' | 'vecchia' | 'laser'
-V -> 'È' | 'fatto' | 'spazzati' | 'è'
-Aux -> 'Ha' | 'sono' | 'stati'
+V -> 'È' | 'fatto' | 'spazzati' | 'è' | 'rotta'
+Aux -> 'Ha' | 'sono' | 'stati' | 'è'
 Adv -> 'via'
 Adp -> 'di' | 'della'| 'in' | 'su' | 'da' | 'con'
