gestito preposizioni nominali

--- a/Translation/Grammar/grammar.cfg
+++ b/Translation/Grammar/grammar.cfg
@@ -1,14 +1,16 @@
 S  -> NP VP | VP
-NP -> Det NOM
+NP -> Det NOM | NOM
 NOM -> Adj NOM | N PP | N Adj PP | N Adj | N | PropN
-VP -> Aux V NP | Aux VP | V NP | V Adv | V
+VP -> Aux V NP | Aux VP | V NP | V Adv | V Adj | V NPP | V
+NPP -> NominalPredicate | Adv NominalPredicate | Adj NominalPredicate
 PP -> Adp NOM | Adp NP
 
-PropN -> 'Repubblica'
+PropN -> 'Repubblica' | 'Kenobi'
 Det -> 'una' | 'La' | 'la' | 'tuo' | 'Gli'
 N -> 'spada' | 'padre' | 'mossa' | 'avanzi'
-Adj -> 'leale' | 'ultimi' | 'vecchia' | 'laser'
+Adj -> 'leale' | 'ultimi' | 'vecchia' | 'laser' | 'fosforescente'
 V -> 'È' | 'fatto' | 'spazzati' | 'è' | 'rotta'
 Aux -> 'Ha' | 'sono' | 'stati' | 'è'
-Adv -> 'via'
+Adv -> 'via' | 'molto'
 Adp -> 'di' | 'della'| 'in' | 'su' | 'da' | 'con'
+NominalPredicate -> 'verde' | 'vecchia'
