--- a/Translation/Grammar/grammar.cfg
+++ b/Translation/Grammar/grammar.cfg
@@ -7,10 +7,10 @@ PP -> Adp NOM | Adp NP
 
 PropN -> 'Repubblica' | 'Kenobi'
 Det -> 'una' | 'La' | 'la' | 'tuo' | 'Gli'
-N -> 'spada' | 'padre' | 'mossa' | 'avanzi'
-Adj -> 'leale' | 'ultimi' | 'vecchia' | 'laser' | 'fosforescente'
-V -> 'È' | 'fatto' | 'spazzati' | 'è' | 'rotta'
+N -> 'spada' | 'padre' | 'mossa' | 'avanzi' | 'Io'
+Adj -> 'leale' | 'ultimi' | 'vecchia' | 'laser' | 'fosforescente' | 'generale'
+V -> 'È' | 'fatto' | 'spazzati' | 'è' | 'rotta' | 'sono'
 Aux -> 'Ha' | 'sono' | 'stati' | 'è'
 Adv -> 'via' | 'molto'
-Adp -> 'di' | 'della'| 'in' | 'su' | 'da' | 'con'
+Adp -> 'di' | 'della'| 'in' | 'su' | 'da' | 'con' | 'del'
 NominalPredicate -> 'verde' | 'vecchia'
